Python notebooks update

--- a/CompBookA/PEx1_Binomial.ipynb
+++ b/CompBookA/PEx1_Binomial.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spotting Sky Mermaids Above Narnia"
+    "# Binomial Distribution in Python\n",
+    "\n",
+    "Date: 2020-10-29"
    ]
   },
   {
@@ -25,11 +27,14 @@
    "source": [
     "## Scenario\n",
     "\n",
-    "> A company specialises in chartering flights from Narnia.\n",
-    "> The company is concerned about the rise in sky mermaids that have been spotted by the crew of the flights, as a collision could be disasterous.\n",
-    "> The flight crew estimates that there is a 17% chance of spotting a sky mermaid during a flight.\n",
-    "> In 20XX, the company is scheduled to fly 18 flights from Narnia.\n",
-    "> It maybe assumed that the event of spotting a sky mermaid is independent of any other event."
+    "A company specialises in chartering flights from Narnia.\n",
+    "The company is concerned about the rise in sky mermaids that have been spotted by the crew of the flights, as a collision could be disasterous.\n",
+    "The flight crew estimates that there is a 17% chance of spotting a sky mermaid during a flight.\n",
+    "\n",
+    "In 20XX, the company is scheduled to fly 18 flights from Narnia.\n",
+    "It may be assumed that the event of spotting a sky mermaid is independent of any other event.\n",
+    "\n",
+    "-----"
    ]
   },
   {
@@ -62,7 +67,9 @@
     "### (a)\n",
     "\n",
     "Let $X$ be a random variable that represents the number of times a sky mermaid is spotted during the flights from Narnia over the year.\n",
-    "Then $X$ is modelled by a binomial distribution, with parameters $n$ being the number of flights flown, and $p=0.17$. In 20XX, $X \\sim B(18,0.17)$."
+    "Then $X$ is modelled by a **binomial distribution**, with parameters $n$ being the number of flights flown, and $p=0.17$.\n",
+    "\n",
+    "In 20XX, $X \\sim B(18,0.17)$."
    ]
   },
   {
@@ -71,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare the distribution, assign reference to x\n",
+    "# declare the distribution\n",
     "x = stats.binom(n=18, p=0.17)"
    ]
   },
@@ -81,7 +88,7 @@
    "source": [
     "### (b)\n",
     "\n",
-    "We'll disply the p.d.f. and c.d.f. using a pandas **DataFrame**"
+    "We'll disply the p.d.f. and c.d.f. using a pandas **DataFrame**."
    ]
   },
   {
@@ -302,12 +309,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1(c)"
+    "### (c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +323,7 @@
        "[Text(0.5, 1.0, 'Probability distribution: B(18, 0.17)'), Text(0, 0.5, 'p(x)')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1(d)\n",
+    "### (d)\n",
     "\n",
     "The mean and variance of the binomial distribution\n",
     "\n",
@@ -361,18 +368,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.06"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5398"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.var()"
    ]
@@ -381,20 +410,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1(e)\n",
+    "### (e)\n",
     "\n",
-    "The probability that five flights will spot sky mermaids in 20XX is\n",
+    "The probability $P(X=x)$ for a binomial distribution is\n",
     "\n",
     "$$\n",
-    "P(X=5) = p(5) = \\binom{18}{5} (0.17)^{5} (0.83)^{13} = \\ldots\n",
+    "P(X=x) = p(x) = \\binom{n}{x} p^{x} (1-p)^{n-x}.\n",
+    "$$\n",
+    "\n",
+    "So the probability that five flights will spot sky mermaids in 20XX is\n",
+    "\n",
+    "$$\n",
+    "P(X=5) = \\binom{18}{5} (0.17)^{5} (0.83)^{13} = \\ldots\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10792927645305388"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.pmf(k=5)"
    ]
@@ -403,9 +449,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1(f)\n",
+    "### (f)\n",
     "\n",
-    "The probability four or fewer flights will spot sky mermaids in 20XX is\n",
+    "The probability $P(X \\leq x)$ for a binomial distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X \\leq x) = F(x) = \\sum_{k = 0}^{x} \\binom{n}{k} p^{k} (1-p)^{n - k}.\n",
+    "$$\n",
+    "\n",
+    "So the probability four or fewer flights will spot sky mermaids in 20XX is\n",
     "\n",
     "$$\n",
     "P(X \\leq 4) = F(4) = \\sum_{k = 0}^{4} \\binom{18}{k} (0.17)^{k} (0.83)^{18 - k} = \\ldots\n",
@@ -414,9 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8213108726294348"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.cdf(x=4)"
    ]
@@ -425,20 +488,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1(g)\n",
+    "### (g)\n",
     "\n",
     "The probability that more than four flights will spot sky mermaids in 20XX is\n",
     "\n",
     "$$\n",
-    "P(X > 4) = 1 - F(4) = \\sum_{k = 5}^{18} \\binom{18}{k} (0.17)^{k} (0.83)^{18 - k} = \\ldots\n",
+    "P(X > 4) = 1 - F(4) = 1 - \\sum_{k = 0}^{4} \\binom{18}{k} (0.17)^{k} (0.83)^{18 - k} = \\ldots\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1786891273705652"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - x.cdf(x=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that method `sf()` is the **shadow function**.\n",
+    "It is defined as $1-F(x)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17868912737056494"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.sf(x=4)"
    ]
