--- a/CompBookA/PEx2_Poisson.ipynb
+++ b/CompBookA/PEx2_Poisson.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Poisson Distribution"
+    "# Poisson Distribution\n",
+    "\n",
+    "Date: 2020-10-29"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +27,13 @@
    "source": [
     "## Scenario\n",
     "\n",
-    "> Some of the sky mermaids are early risers.\n",
-    "> They are also a vocal bunch who often contact their local MP to complain as soon as they wake up.\n",
-    ">\n",
-    "> On a typical day, the MP receives approximately 5% of complaints from concerned sky mermaids between 4am and 5am.\n",
-    "> The MP would like to model the distribution of complaints received between 4am and 5am on a \"busy day\".\n",
-    ">\n",
-    "> It can be taken that a \"busy day\" is defined as receiving 100 complaints, and assumed that the event of receiving a complaint is independent of all other complaints.\n",
+    "Some of the sky mermaids are early risers.\n",
+    "They are also a vocal bunch who often contact their local MP to complain as soon as they wake up.\n",
+    "\n",
+    "On a typical day, the MP receives approximately 5% of complaints from concerned sky mermaids between 4am and 5am.\n",
+    "The MP would like to model the distribution of complaints received between 4am and 5am on a \"busy day\".\n",
+    "\n",
+    "It can be taken that a \"busy day\" is defined as receiving 100 complaints, and assumed that the event of receiving a complaint is independent of all other complaints.\n",
     "\n",
     "-----"
    ]
@@ -48,11 +50,13 @@
     "\n",
     "**(c)** Plot both of the distributions.\n",
     "\n",
-    "**(d)** What is the probability the MP will receive seven complaints from the sky mermaids between 4am and 5am? Calculate the probability using both the Binomial and Poisson distributions\n",
+    "**(d)** What is the probability the MP will receive seven complaints from the sky mermaids between 4am and 5am?\n",
     "\n",
     "**(e)** What is the probability the MP will receive no more that 10 complaints from the sky mermaids between 4am and 5am?\n",
     "\n",
     "**(f)** What is the probability the MP will receive more than five complaints between 4am and 5am?\n",
+    "\n",
+    "*Note, calculate any probability using both the Binomial and Poisson distributions.*\n",
     "\n",
     "-----"
    ]
@@ -69,11 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare the distribution\n",
     "binomial_x = stats.binom(n=100, p=0.05)"
    ]
   },
@@ -94,11 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare the poisson dist\n",
     "poisson_x = stats.poisson(mu=5)"
    ]
   },
@@ -111,21 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare an array\n",
-    "range_x = np.arange(start=0, stop=19, step=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_complaints = pd.DataFrame(data=range_x, columns={'x'})"
+    "range_x = np.arange(start=0, stop=19)"
    ]
   },
   {
@@ -134,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_complaints['Binomial: p(x)'] = binomial_x.pmf(df_complaints['x'])"
+    "df_complaints = pd.DataFrame(data=range_x, columns={'x'})"
    ]
   },
   {
@@ -143,12 +135,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_complaints['Poisson: p(x)'] = poisson_x.pmf(df_complaints['x'])"
+    "df_complaints['Binomial: p(x)'] = binomial_x.pmf(df_complaints['x'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_complaints['Poisson: p(x)'] = poisson_x.pmf(df_complaints['x'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
        "[Text(0.5, 1.0, 'Binomial distribution: B(100, 0.05)'), Text(0, 0.5, 'p(x)')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "[Text(0.5, 1.0, 'Probability distribution: Poisson(5)'), Text(0, 0.5, 'p(x)')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,7 +267,13 @@
    "source": [
     "#### Poisson\n",
     "\n",
-    "The probability the MP receives seven complaints between 4am and 5am is\n",
+    "The probability $P(X=x)$ for a Poisson distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X = x) = p(x) = e^{-\\lambda} \\bigg( \\frac{-\\lambda^{x}}{x!} \\bigg).\n",
+    "$$\n",
+    "\n",
+    "So the probability the MP receives seven complaints between 4am and 5am is\n",
     "\n",
     "$$\n",
     "P(X = 20) = p(20) = e^{-5} \\bigg( \\frac{5^{7}}{7!} \\bigg) = \\ldots\n",
@@ -339,6 +346,14 @@
    "source": [
     "#### Poisson\n",
     "\n",
+    "The probability $P(X \\leq x)$ for a Poisson distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X \\leq x) = F(x) = e^{-\\lambda} \\sum_{k=0}^{x} \\frac{\\lambda^{k}}{k!}.\n",
+    "$$\n",
+    "\n",
+    "So $P(X \\leq 10)$ is\n",
+    "\n",
     "$$\n",
     "P(X \\leq 10) = F(10) = e^{-5} \\sum_{k=0}^{10} \\frac{5^{k}}{k!} = \\ldots\n",
     "$$"
@@ -380,7 +395,7 @@
     "#### Binomial \n",
     "\n",
     "$$\n",
-    "P(X > 5) = 1 - F(5) = 1 - \\sum_{k=0}^{5} \\binom{100}{k}0.05^{k}0.95^{n-k} = \\ldots\n",
+    "P(X > 5) = 1 - F(5) = 1 - \\sum_{k=0}^{x} \\binom{100}{k}0.05^{k}0.95^{n-k} = \\ldots\n",
     "$$"
    ]
   },
@@ -411,7 +426,7 @@
     "#### Poisson\n",
     "\n",
     "$$\n",
-    "P(X > 5) = 1 - F(5) = 1 - \\bigg( e^{-5} \\sum_{k=0}^{5} \\frac{5^{k}}{k!} \\bigg) = \\ldots\n",
+    "P(X > 5) = 1 - F(5) = 1 - \\Bigg( e^{-5} \\sum_{k=0}^{5} \\frac{5^{k}}{k!} \\Bigg) = \\ldots\n",
     "$$"
    ]
   },
