--- a/CompBookA/PEx5_Geometric.ipynb
+++ b/CompBookA/PEx5_Geometric.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The First Flight to Spot a Sky Mermaids Above Narnia"
+    "# Geometric Distribution\n",
+    "\n",
+    "Date: 2020-10-31"
    ]
   },
   {
@@ -25,12 +27,14 @@
    "source": [
     "## Scenario\n",
     "\n",
-    "> A company specialises in chartering flights from Narnia.\n",
-    "> The company is concerned about the rise in sky mermaids that have been spotted by the crew of the flights, as a collision could be disasterous.\n",
-    "> The flight crew estimates that there is a 17% chance of spotting a sky mermaid during a flight.\n",
-    ">\n",
-    "> The company is interested in modelling which of the flights will spot the first sky mermaid of the year.\n",
-    "> It maybe assumed that the event of spotting a sky mermaid is independent of any other event."
+    "A company specialises in chartering flights from Narnia.\n",
+    "The company is concerned about the rise in sky mermaids that have been spotted by the crew of the flights, as a collision could be disasterous.\n",
+    "The flight crew estimates that there is a 17% chance of spotting a sky mermaid during a flight.\n",
+    "\n",
+    "The company is interested in modelling which of the flights will spot the first sky mermaid of the year.\n",
+    "It may be assumed that the event of spotting a sky mermaid is independent of any other event.\n",
+    "\n",
+    "-----"
    ]
   },
   {
@@ -68,7 +72,7 @@
     "### (a)\n",
     "\n",
     "Let $Y$ be a random variable that represents that first flight from Narnia where a sky mermaid is spotted.\n",
-    "Then $Y$ is modelled by a geometric distribution, with parameter $p=0.17$, so $Y \\sim G(0.17)$."
+    "Then $Y$ is modelled by a **geometric distribution**, with parameter $p=0.17$, so $Y \\sim G(0.17)$."
    ]
   },
   {
@@ -77,7 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare the distribution, assign reference to y\n",
     "y = stats.geom(p=0.17)"
    ]
   },
@@ -87,17 +90,17 @@
    "source": [
     "### (b)\n",
     "\n",
-    "We'll disply the p.d.f. and c.d.f. using a pandas **DataFrame**"
+    "We'll disply the p.d.f. and c.d.f. using a pandas **DataFrame**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# declare an array (1:18)\n",
-    "range_y = np.arange(start=1, stop=19, step=1)"
+    "range_y = np.arange(start=1, stop=19)"
    ]
   },
   {
@@ -403,7 +406,13 @@
    "source": [
     "### (e)\n",
     "\n",
-    "The probability the first sky mermaid will be spotted during the seventh flight is\n",
+    "The probability $P(X=x)$ for a geometric distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X=x) = p(x) = (1-p)^{x-1} p.\n",
+    "$$\n",
+    "\n",
+    "So the probability the first sky mermaid will be spotted during the seventh flight is\n",
     "\n",
     "$$\n",
     "P(Y=7) = p(7) = (0.83)^{6} 0.17 = \\ldots\n",
@@ -436,7 +445,15 @@
    "source": [
     "### (f)\n",
     "\n",
-    "The probability the first sky mermaid will be spotted before or during the fifth flight is\n",
+    "### (f)\n",
+    "\n",
+    "The probability $P(X \\leq x)$ for a geometric distribution is\n",
+    "\n",
+    "$$\n",
+    "P(X \\leq x) = F(x) =1 - (1 - p)^{x}.\n",
+    "$$\n",
+    "\n",
+    "So the probability the first sky mermaid will be spotted before or during the fifth flight is\n",
     "\n",
     "$$\n",
     "P(Y \\leq 5) = F(5) = 1 - 0.83^{5} = \\ldots\n",
