Updated tite and date stamp

--- a/CompBookA/PEx3_ProbabilityDensityFunctions.ipynb
+++ b/CompBookA/PEx3_ProbabilityDensityFunctions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability Density Functions\n",
+    "# Probability Density Functions in Python\n",
     "\n",
     "Date: 2020-10-30"
    ]
