--- a/CompBookA/PEx4_DataVisualisation.ipynb
+++ b/CompBookA/PEx4_DataVisualisation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Visualisation: Washington DC Daily Bike Rental Figures\n",
+    "# Data Visualisations in Python\n",
     "\n",
     "Date: 2020-10-30"
    ]
