--- a/CompBookA/PEx5_Geometric.ipynb
+++ b/CompBookA/PEx5_Geometric.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geometric Distribution\n",
+    "# Geometric Distribution in Python\n",
     "\n",
     "Date: 2020-10-31"
    ]
