--- a/CompBookA/PEx8_ContinuousUniform.ipynb
+++ b/CompBookA/PEx8_ContinuousUniform.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exponential Distribution\n",
+    "# Continuous Uniform Distribution in Python\n",
     "\n",
-    "Date: 2020-10-31"
+    "Date: 2020-11-02"
    ]
   },
   {
