--- a/CompBookA/PEx2_Poisson.ipynb
+++ b/CompBookA/PEx2_Poisson.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Poisson Distribution\n",
+    "# Poisson Distribution in Python\n",
     "\n",
     "Date: 2020-10-29"
    ]
