--- a/CompBookA/PEx6_Exponential.ipynb
+++ b/CompBookA/PEx6_Exponential.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exponential Distribution\n",
+    "# Exponential Distribution in Python\n",
     "\n",
     "Date: 2020-10-31"
    ]
