Added discrete random variable note

--- a/PEx12_DiscreteRandomVariable.ipynb
+++ b/PEx12_DiscreteRandomVariable.ipynb
@@ -21,10 +21,7 @@
    "source": [
     "# Example: Discrete Random Variables\n",
     "\n",
-    "~~~\n",
-    "id: \"Example 20201108-1\"\n",
-    "Date: 2020-11-08\n",
-    "~~~"
+    "Date: 2020-11-08"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -47,17 +44,17 @@
   },
   {
    "source": [
-    "(a) Prove that $p(x)$ a valid p.m.f. for $X$?\n",
+    "**(a)** Prove that $p(x)$ a valid p.m.f. for $X$?\n",
     "\n",
-    "(b) Construct a table showing the c.d.f. of $X$.\n",
+    "**(b)** Construct a table showing the c.d.f. of $X$.\n",
     "\n",
-    "(c) Calculate the probability that $X$ equals 3.\n",
+    "**(c)** Calculate the probability that $X$ equals 3.\n",
     "\n",
-    "(d) Calculate the probability that $X$ is less than 3.\n",
+    "**(d)** Calculate the probability that $X$ is less than 3.\n",
     "\n",
-    "(e) Calculate the expected value of $X$.\n",
+    "**(e)** Calculate the expected value of $X$.\n",
     "\n",
-    "(f) Calculate the variance of $X$.\n",
+    "**(f)** Calculate the variance of $X$.\n",
     "\n",
     "-----"
    ],
