--- a/Ex01_DiscreteRandomVariable.ipynb
+++ b/Ex01_DiscreteRandomVariable.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "source": [
-    "**(a)** Prove that $p(x)$ a valid p.m.f. for $X$?\n",
+    "**(a)** Prove that $p(x)$ a valid p.m.f. for $X$.\n",
     "\n",
     "**(b)** Construct a table showing the c.d.f. of $X$.\n",
     "\n",
